--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="index.html">
-                <span>
+                <span style="color: #5c3c87;">
                     AventusBeratung
                 </span>
             </a>
